package proto.pb;

message RecordedTimePeriod {
    required int64 startTime = 1;
    required int64 duration = 2;
}

message RecordedTimePeriods {
    repeated RecordedTimePeriod recordedTypePeriods = 1;
}
