package pb;

import "resource.proto";

option java_package = "com.google.protobuf.implementation";
option java_outer_classname = "UserProtos";

message User {
    extend Resource {
        required User resource = 102;
    }

    optional string password = 1;
    required bool isAdmin    = 2;
    optional uint64 rights   = 3;
    optional string email    = 4;
    optional string digest   = 5;
    optional string hash     = 6;
}
